--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
         <button onclick="showDetails('Yamaha-MT-07')">Détails</button>
       </div>
     </div>
+     <div class="car-card">
+      <img src="images/R (4).jpeg" alt="Ducati" />
+      <div class="car-details">
+        <h3>Ducati Aprila </h3>
+        <p>Prix: 20,500 €</p>
+        <button onclick="showDetails('Ducati')">Détails</button>
+      </div>
+    </div>
       
 
   </div>
