--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VoitureLux - Accueil</title>
+  <title>Marché des Motos- Accueil</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Header + Navbar -->
+
   <header>
     <div class="navbar">
-      <h1>Marché des Motos</h1>
+      <img src="images/logos.png" alt="logo" class="logo">
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="contact.html">Contact</a></li>
+           <li><a href="a propos.html">a propos</a></li>
        
         </ul>
       </nav>
@@ -117,7 +118,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 VoitureLux - Tous droits réservés.</p>
+    <p>&copy; 2025 Marché des Motos - Tous droits réservés.</p>
   </footer>
 
   <!-- Script -->
