--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>VoitureLux - Contact</title>
+  <title>Marché des Motos - Contact</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -10,11 +10,12 @@
 
   <header>
     <div class="navbar">
-      <h1>VoitureLux</h1>
+      <h1>Marché des Motos</h1>
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
+           <li><a href="a propos.html">a propos</a></li>
          
         </ul>
       </nav>
@@ -61,7 +62,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 VoitureLux - Tous droits réservés.</p>
+    <p>&copy; Marché des Motos - Tous droits réservés.</p>
   </footer>
 
 </body>
