ajouter page a propos

--- a/a propos.html
+++ b/a propos.html
@@ -1,47 +1,88 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>À propos - Marché des Motos</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>À propos - Marché des Motos</title>
+   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-      <header>
+
+  <header>
     <div class="navbar">
       <h1>Marché des Motos</h1>
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="a propos.html">a propos</a></li>
-       
+          <li><a href="a-propos.html">À propos</a></li>
         </ul>
       </nav>
     </div>
   </header>
-    <h1>À propos de nous</h1>
 
-    <h2>Qui sommes-nous ?</h2>
-    <p>
-        Bienvenue sur <strong>Marché de Voitures</strong>, votre plateforme en ligne dédiée à l’achat et la vente de voitures d’occasion au Maroc.
-    </p>
-    <p>
-        Depuis notre création, nous avons aidé des centaines de clients à trouver la voiture parfaite au meilleur prix. Que vous soyez à la recherche d'une petite citadine, d'un SUV familial ou d'une voiture de luxe, notre site est là pour vous.
-    </p>
+  <h1>À propos de nous</h1>
 
-    <h2>Notre mission</h2>
-    <p>
-        Offrir un service simple, rapide et fiable pour connecter les acheteurs et les vendeurs de voitures. Nous garantissons la transparence, la sécurité et la qualité des annonces publiées.
-    </p>
+  <h2>Qui sommes-nous ?</h2>
+  <p>
+    <strong>Marché des Motos</strong> est une plateforme 100% marocaine spécialisée dans la vente et l’achat de motos neuves et d’occasion.
+    Que vous soyez amateur de deux-roues ou professionnel, notre site vous offre une large gamme d’annonces de qualité.
+  </p>
+  <p>
+    Nous avons lancé ce projet en 2024 avec une vision claire : faciliter l’accès aux motos pour tous les Marocains, dans toutes les villes du royaume.
+  </p>
 
-    <h2>Contact</h2>
-    <p>
-        Vous pouvez nous contacter à : <strong>contact@voiturelux.com</strong><br>
-        Téléphone : <strong> +212 600-000000</strong>
-    </p>
+  <h2>Notre mission</h2>
+  <p>
+    Notre mission est simple : vous offrir un espace sécurisé, rapide et pratique pour acheter ou vendre votre moto.
+  </p>
+  <p>
+    Grâce à notre interface facile à utiliser, vous pouvez publier une annonce en quelques minutes seulement, ajouter des photos, une description, et recevoir des appels ou des messages directement des acheteurs intéressés.
+  </p>
 
-      <footer>
-    <p>&copy; Marché des Motos- Tous droits réservés.</p>
+  <h2>Pourquoi nous choisir ?</h2>
+  <ul>
+    <li>✅ Des annonces vérifiées pour éviter les arnaques</li>
+    <li>✅ Un moteur de recherche puissant et rapide</li>
+    <li>✅ Une communauté active et passionnée</li>
+    <li>✅ Un support client disponible 7j/7</li>
+    <li>✅ Publication gratuite d'annonces</li>
+  </ul>
+
+  <h2>Nos services</h2>
+  <p>
+    En plus des annonces classiques, nous proposons :
+  </p>
+  <ul>
+    <li>📷 Service de photographie professionnelle pour votre moto</li>
+    <li>🛠️ Conseils pour l’entretien et les réparations</li>
+    <li>📈 Estimation gratuite de la valeur de votre moto</li>
+    <li>🚚 Service de livraison dans certaines villes (à venir)</li>
+  </ul>
+
+  <h2>Nos partenaires</h2>
+  <p>
+    Nous travaillons avec plusieurs garages, mécaniciens et importateurs pour vous offrir les meilleures motos et services possibles.
+  </p>
+
+  <h2>Témoignages</h2>
+  <blockquote>
+    "Grâce à Marché des Motos, j’ai vendu ma Yamaha en 2 jours ! Super site, facile à utiliser." – <em>Oussama de Casablanca</em>
+  </blockquote>
+  <blockquote>
+    "J’ai trouvé une moto parfaite pour mon fils, avec un bon prix et sans arnaques. Je recommande vivement." – <em>Fatima de Rabat</em>
+  </blockquote>
+
+  <h2>Contact</h2>
+  <p>
+    Si vous avez des questions, n’hésitez pas à nous contacter :
+    <br>Email : <strong>contact@marche-motos.ma</strong>
+    <br>Téléphone : <strong>+212 600-123456</strong>
+    <br>Adresse : 10 Rue des Motards, Casablanca, Maroc
+  </p>
+
+  <footer>
+    <p>&copy; 2025 Marché des Motos - Tous droits réservés.</p>
   </footer>
+
 </body>
 </html>
