--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-
+  <!-- Header + Navbar -->
   <header>
     <div class="navbar">
-      <img src="images/logos.png" alt="logo" class="logo">
+      <h1>Marché des Motos</h1>
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
