ajouter page a propos modifier page a propos avec css

--- a/a propos.html
+++ b/a propos.html
@@ -19,6 +19,7 @@
       </nav>
     </div>
   </header>
+    <div class="about-section">
 
   <h1>À propos de nous</h1>
 
@@ -79,7 +80,7 @@
     <br>Téléphone : <strong>+212 600-123456</strong>
     <br>Adresse : 10 Rue des Motards, Casablanca, Maroc
   </p>
-
+</div>
   <footer>
     <p>&copy; 2025 Marché des Motos - Tous droits réservés.</p>
   </footer>
